Added previous todos

--- a/modify-todo.html
+++ b/modify-todo.html
@@ -60,6 +60,8 @@
       </div>
     </div>
 
+    <div class="title js-title"></div>
+
     <div class="error-container js-error-message"></div>  
 
     <div class="container js-container"></div>
