--- a/todos-page.html
+++ b/todos-page.html
@@ -3,7 +3,7 @@
   <head>
     <title>Current To Dos</title>
     <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/current-todo.css">
+    <link rel="stylesheet" href="styles/todo-page.css">
     <link rel="stylesheet" href="styles/header.css"> 
 
     <!-- Inter font -->
@@ -59,12 +59,10 @@
       </div>
     </div>
 
-    <div class="title">
-      Current To Dos
-    </div>
+    <div class="title js-title"></div>
 
     <div class="todo-list js-todo-list"></div>
 
-    <script type="module" src="scripts/current-todos.js"></script>
+    <script type="module" src="scripts/todos-page.js"></script>
   </body>
 </html>
