Fixed tab header

--- a/todos-page.html
+++ b/todos-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Current To Dos</title>
+    <title>To Do List</title>
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/todo-page.css">
     <link rel="stylesheet" href="styles/header.css"> 
