--- a/modify-todo.html
+++ b/modify-todo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Add a To Do</title>
+    <title>To Do List</title>
 
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css"> 
