Added animations to the todos page

--- a/modify-todo.html
+++ b/modify-todo.html
@@ -15,7 +15,7 @@
 
   <body>
     <div class="header">
-      <div class="header-left-section">
+      <div class="header-left-section js-header-title">
         To Do List
       </div>
 
