--- a/todos-page.html
+++ b/todos-page.html
@@ -63,6 +63,8 @@
 
     <div class="todo-list js-todo-list"></div>
 
+    <!-- Animations via anime.js -->
+    <script src="https://cdn.jsdelivr.net/npm/animejs/lib/anime.iife.min.js"></script>
     <script type="module" src="scripts/todos-page.js"></script>
   </body>
 </html>
